tests/reference/asr-array_size_01-cdffaed.stderr
semantic error: Incorrect number of arguments to the array size() intrinsic function; It accepts the array and optionally the dimension and the result kind.
 --> tests/errors/array_size_01.f90:5:14
  |
5 |     size_a = size(a, 1, 4, kind=4)
  |              ^^^^^^^^^^^^^^^^^^^^^ 
